--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,20 @@ dependencies:
 
   #show log in project
   logger: ^1.1.0
+
+  #
   get_it: ^7.2.0
+  app_settings: ^4.1.5
+  freezed: ^2.0.2
+  url_launcher: ^6.1.0
+  webview_flutter: ^3.0.2
+  firebase_core: ^1.16.0
+  cloud_firestore: ^3.1.14
+  google_sign_in: ^5.3.0
+  flutter_facebook_auth: ^4.3.0
+  flutter_login_facebook: ^1.4.1
+  firebase_auth: ^3.3.17
+
 
 dev_dependencies:
   auto_route_generator: ^3.0.4
