--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,16 +52,36 @@ dependencies:
 
   #
   get_it: ^7.2.0
+  #open app setting
   app_settings: ^4.1.5
+
+  #convert json
   freezed: ^2.0.2
+
+  #open url
   url_launcher: ^6.1.0
+  # web view
   webview_flutter: ^3.0.2
+
   firebase_core: ^1.16.0
   cloud_firestore: ^3.1.14
   google_sign_in: ^5.3.0
   flutter_facebook_auth: ^4.3.0
   flutter_login_facebook: ^1.4.1
   firebase_auth: ^3.3.17
+  #loading
+  flutter_easyloading: ^3.0.3
+  #date time
+  flutter_datetime_picker: ^1.5.1
+  #convert date
+  intl: ^0.17.0
+  #firebase_storage
+  firebase_storage: ^10.2.15
+  dio: ^4.0.6
+  firebase_database: ^9.0.13
+  file_picker: ^4.5.1
+  dropdown_button2: ^1.4.0
+  google_maps_flutter: ^2.1.5
 
 
 dev_dependencies:
