--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -89,6 +89,7 @@ dependencies:
   image_cropper: ^2.0.3
   flutter_local_notifications: ^9.5.3+1
   firebase_messaging: ^11.4.0
+  fluttertoast: ^8.0.9
 
 
 dev_dependencies:
